--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 name = "hagane-simd"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Aurora <aurora@aventine.se>"]
 license = "MIT"
 description = "A generic SIMD vector / matrix library"
+
+[dev-dependencies]
+quickcheck = "0.4.1"
